src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/ValidValidateTemplates/NestedSchemaTemplate.liquid
{% validate "Schemas/TestSchema.schema.json" -%}
{
    "resourceType": "{{ msg.resourceType }}",
    "id": "{{ msg.id}}",
    "nestedProperty":
    {% validate "Schemas/TestSubPropertySchema.schema.json" -%}
    {
        "testField": "fieldValue"
    }
    {% endvalidate -%}
}
{% endvalidate -%}