src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/InvalidEmptyContent.liquid
{% validate "Schemas/TestSchema.schema.json" -%}
{% endvalidate -%}
